added nav bar in home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,11 @@
     <script src="../static/bootstrap.js"></script>
 </head>
 <body>
+	<div class=".">
+		<nav class="nav">
+			<a class="nav-link active" href="index.html">Home</a>
+		</nav>
+	</div>
 
 </body>
 </html>
