--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,53 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Portfolio</title>
-    <link href="../static/bootstrap.css"/>
-    <script src="../static/bootstrap.js"></script>
+    <!--<link href="../static/bootstrap.css"/>
+    <script src="../static/bootstrap.js"></script>-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class=".">
-		<nav class="nav">
-			<a class="nav-link active" href="index.html">Home</a>
-		</nav>
-	</div>
+<div class="container-fluid" style="background-color: aqua">
+    <nav class="nav">
+        <a class="nav-link active" href={{ url_for('main_page') }}>Home</a>
+        <a class="nav-link active" href="index.html">Achievements</a>
+        <a class="nav-link active" href="index.html">Hobbies</a>
+    </nav>
+</div>
+
+<div class="container">
+    <div class="row" style="padding-top: 100px">
+        <div class="col">
+            <div class="row" style="padding-top: 50px">
+                <div class="col-2">Name:</div>
+                <div class="col">Debapriyo Paul</div>
+            </div>
+            <div class="row">
+                <div class="col-2">Email:</div>
+                <div class="col">
+                    <url>debapriyopaul.dp@gmail.com</url>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">Mobile:</div>
+                <div class="col"></div>
+            </div>
+        </div>
+        <div class="col">
+            <img src="../images/img032.jpg" alt="profile_pic" style="align-self: flex-end">
+        </div>
+    </div>
+    <!--<div class="row">
+        <div class="col"><button type="button" value="Achivements" name="Achivements" style="align-self: center">Achivements</button></div>
+        <div class="col">Hob</div>
+    </div>
+    <div class="row">
+        <div class="col">Contact</div>
+    </div>-->
+</div>
 
 </body>
 </html>
