basic layout mapping in achievements page

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,31 +17,39 @@
 <body>
 <div class="container-fluid" style="background-color: aqua">
     <nav class="nav">
-        <a class="nav-link active" href={{ url_for('main_page') }}>Home</a>
-        <a class="nav-link active" href="index.html">Achievements</a>
-        <a class="nav-link active" href="index.html">Hobbies</a>
+        <!--<a class="nav-link active" href={{ url_for('main_page') }}>Home</a>
+        <a class="nav-link active" href={{ url_for('achieve_page') }}>Achievements</a>
+        <a class="nav-link active" href={{ url_for('hobbies_page') }}>Hobbies</a>-->
     </nav>
 </div>
 
 <div class="container">
     <div class="row" style="padding-top: 100px">
-        <div class="col">
-            <div class="row" style="padding-top: 50px">
+        <div class="col" align="left">
+            <div class="row" style="padding-top: 5px; padding-bottom: 10px">
                 <div class="col-2">Name:</div>
                 <div class="col">Debapriyo Paul</div>
             </div>
-            <div class="row">
+            <div class="row" style="padding-top: 5px; padding-bottom: 10px">
                 <div class="col-2">Email:</div>
                 <div class="col">
-                    <url>debapriyopaul.dp@gmail.com</url>
+                    <a href="#">debapriyopaul.dp@gmail.com</a>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="padding-top: 5px; padding-bottom: 10px">
                 <div class="col-2">Mobile:</div>
-                <div class="col"></div>
+                <div class="col">8420160273</div>
+            </div>
+            <div class="row" style="padding-top: 5px; padding-bottom: 10px">
+                <div class="col-2">Address:</div>
+                <div class="col">
+                    <address>
+                        20, Bindhyabasinitala Road Ariadaha, Kolkata - 700057
+                    </address>
+                </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col" align="right">
             <img src="../images/img032.jpg" alt="profile_pic" style="align-self: flex-end">
         </div>
     </div>
